--- a/Altera_Vita/Packages/manifest.json
+++ b/Altera_Vita/Packages/manifest.json
@@ -5,7 +5,7 @@
     "com.unity.ide.rider": "1.0.8",
     "com.unity.ide.visualstudio": "1.0.11",
     "com.unity.ide.vscode": "1.0.7",
-    "com.unity.probuilder": "4.2.3",
+    "com.unity.probuilder": "4.3.0-preview.2",
     "com.unity.progrids": "3.0.3-preview.4",
     "com.unity.test-framework": "1.0.14",
     "com.unity.textmeshpro": "2.0.1",
